--- a/style.css
+++ b/style.css
@@ -28,3 +28,16 @@ header{
 .letras:checked{
     color: beige;
 }
+
+section {
+    background-image: url("Img/imagen1.png");
+    display: block;
+    width: 80%;
+    height: 300px;
+    margin: auto;
+    border-radius: 30px;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+ 
